@@ -1,6 +1,6 @@
 2017-07-25  Mark Wielaard  <mark@klomp.org>
 
-	* NEWS: Mention new DWARF5 attributes in dwarf.h.
+	* NEWS: Mention new DWARF5 attributes and tags in dwarf.h.
 
 2017-07-18  Mark Wielaard  <mark@klomp.org>
 
